version 0.996
- closing a session clears the selector dialog presets


05/15/2002 version 0.995
- Raise library version to 13.0.0
- numerous small updates to facilitate internationalization
- give the user a choice of delimiters (comma, space or tab)
  when importing or exporting "CSV" data
- strengthen checks on invalid variable names in data files
- improve recognition of scalars versus vectors in genr
- fix bug in Create Dataset: undated data appeared as "annual"
- add descriptive report on dataset to Data menu
- fix bug in writing Utilities/R session: R data set was being
  written in wrong (CSV) format
- fix bug: datafile name was not being cleared on Close Session
- refinements to Makefiles: don't expand CFLAGS multiple times
- handle spaces in filenames when stacking the "open" command
- fix bugs with editing gnuplot graphs
- get win32 LaTeX view working properly
- bugfixes for gnumeric and excel spreadsheet importers
- bugfix: unitialized data in cointegration test with constant
- add new, improved dialog box for specifying models, etc.
- remove all system() calls on win32
- switch to a more "standard" (I think) presentation of WLS
  statistics
- fix some subtle bugs with the genr() function (scalars versus
  vectors in conjunction with sub-sampled data)
- add checks for illegal variable names when importing from
  CSV, Excel and Gnumeric

04/21/2002 version 0.994
- fix bugs in win32 copy to clipboard
- fix RTF printing of correlation matrix
- fix bug in genr (generating a scalar when data set is sub-
  sampled)
- fix bug: editing periodogram graph using GUI
- partially update docs
- distinguish between $T (number of obs used in last model) and
  $nobs (number of obs in current sample range) in genr
  expressions
- fix bug in gnuplot PNG display for remote X sessions
- add configure option "--disable-png-graphics" to revert to
  old-style behaviour of gnuplot in case of problems
- remove upwanted dependency on libgcc_s in Red Hat binary rpm