@@ -144,6 +144,8 @@ void do_graph_from_selector (GtkWidget *widget, gpointer p);
 
 void do_box_graph (GtkWidget *widget, gpointer p);
 
+void do_box_graph_trad (GtkWidget *widget, dialog_t *ddata);
+
 void do_dummy_graph (GtkWidget *widget, gpointer p);
 
 void display_selected (GtkWidget *widget, gpointer p);
